src/main/java/com/example/shop/core/global/error/EntityNotFoundException.java
package com.example.shop.core.global.error;

public class EntityNotFoundException extends BusinessException {

    public EntityNotFoundException(String message) {
        super(message, ErrorCode.ENTITY_NOT_FOUND);
    }
}